Fix paragraph word wrapping

--- a/assets/css/style_articles.css
+++ b/assets/css/style_articles.css
@@ -27,6 +27,10 @@ pre {
   margin: 1em 0;
 }
 
+p {
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+}
 
 code {
   display: inline;
